# process-data

./: README.md  process.md  process_data.py  pyproject.toml  requirements.txt
docs/: LOG.md  explain.md  process_data.py
process_data/: __init__.py  auth.py  cli.py  data_store.py  main.py  persister.py
